# trend_to_product

./: .env.example  .gitignore  Dockerfile  main.py  patches.py  pyproject.toml  requirements.txt
agents/: architect.py  builder.py  critic.py  scout.py
config/: agents.yaml  tasks.yaml
storage/: db.py  recorder.py
tools/: file_writer.py  github_scraper.py  hn_scraper.py  producthunt_scraper.py  reddit_scraper.py  twitter_scraper.py
