[project]
name = "trend-to-product"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "setuptools<75",
    "crewai==1.9.3",
    "crewai-tools==1.9.3",
    "anthropic>=0.40.0",
    "praw>=7.7.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "snscrape>=0.7.0.20230622",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

